--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -19,10 +19,15 @@ dependencies:
   - clyent=1.2.2=py35_1
   - constantly=15.1.0=py35h28b3542_0
   - cryptography=2.3.1=py35hdbc3d79_0
+  - dbus=1.13.2=h760590f_1
   - decorator=4.3.0=py35_0
   - entrypoints=0.2.3=py35_2
+  - expat=2.2.6=h0a44026_0
+  - gettext=0.19.8.1=h15daf44_3
+  - glib=2.56.2=hd9629dc_0
   - html5lib=1.0.1=py35_0
   - hyperlink=18.0.0=py35_0
+  - icu=58.2=h4b95b61_1
   - idna=2.7=py35_0
   - incremental=17.5.0=py35_0
   - intel-openmp=2019.0=118
@@ -32,14 +37,19 @@ dependencies:
   - ipywidgets=7.4.1=py35_0
   - jedi=0.12.1=py35_0
   - jinja2=2.10=py35_0
+  - jpeg=9b=he5867d9_2
   - jsonschema=2.6.0=py35h2dd9e4b_0
+  - jupyter=1.0.0=py35_7
   - jupyter_client=5.2.3=py35_0
+  - jupyter_console=5.2.0=py35hd2aa692_1
   - jupyter_core=4.4.0=py35_0
   - libcxx=4.0.1=h579ed51_0
   - libcxxabi=4.0.1=hebd6815_0
   - libedit=3.1.20170329=hb402a30_2
   - libffi=3.2.1=h475c297_4
   - libgfortran=3.0.1=h93005f0_2
+  - libiconv=1.15=hdd342a3_7
+  - libpng=1.6.35=ha441bb4_0
   - libsodium=1.0.16=h3efe00b_0
   - markupsafe=1.0=py35h1de35cc_1
   - mistune=0.8.3=py35h1de35cc_1
@@ -61,6 +71,7 @@ dependencies:
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py35_1
   - parso=0.3.1=py35_0
+  - pcre=8.42=h378b8a2_0
   - pexpect=4.6.0=py35_0
   - pickleshare=0.7.4=py35h9517181_0
   - pip=10.0.1=py35_0
@@ -72,12 +83,15 @@ dependencies:
   - pycparser=2.19=py35_0
   - pygments=2.2.0=py35h392a662_0
   - pyopenssl=18.0.0=py35_0
+  - pyqt=5.9.2=py35h655552a_2
   - pysocks=1.6.8=py35_0
   - python=3.5.6=hc167b69_0
   - python-dateutil=2.7.3=py35_0
   - pytz=2018.5=py35_0
   - pyyaml=3.13=py35h1de35cc_0
   - pyzmq=17.1.2=py35h1de35cc_0
+  - qt=5.9.6=h45cd832_2
+  - qtconsole=4.4.1=py35_0
   - readline=7.0=h1de35cc_5
   - requests=2.19.1=py35_0
   - scikit-learn=0.20.0=py35h4f467ca_1
@@ -86,6 +100,7 @@ dependencies:
   - service_identity=17.0.0=py35h28b3542_0
   - setuptools=40.2.0=py35_0
   - simplegeneric=0.8.1=py35_2
+  - sip=4.19.8=py35h0a44026_0
   - six=1.11.0=py35_1
   - sqlite=3.25.2=ha441bb4_0
   - terminado=0.8.1=py35_1
@@ -107,4 +122,6 @@ dependencies:
   - zlib=1.2.11=hf3cbc9b_2
   - zope=1.0=py35_1
   - zope.interface=4.5.0=py35h1de35cc_0
+  - pip:
+    - scripts==0.1
 
