--- a/environment_linux.yml
+++ b/environment_linux.yml
@@ -5,7 +5,6 @@ dependencies:
   - _nb_ext_conf=0.4.0=py35_1
   - anaconda-client=1.7.2=py35_0
   - appdirs=1.4.3=py35h28b3542_0
-  - appnope=0.1.0=py35hd172556_0
   - asn1crypto=0.24.0=py35_0
   - attrs=18.2.0=py35h28b3542_0
   - automat=0.7.0=py35_0
@@ -14,115 +13,121 @@ dependencies:
   - bleach=2.1.4=py35_0
   - ca-certificates=2018.03.07=0
   - certifi=2018.8.24=py35_1
-  - cffi=1.11.5=py35h6174b99_1
+  - cffi=1.11.5=py35he75722e_1
   - chardet=3.0.4=py35_1
   - clyent=1.2.2=py35_1
   - constantly=15.1.0=py35h28b3542_0
-  - cryptography=2.3.1=py35hdbc3d79_0
-  - cython=0.28.5=py35h0a44026_0
-  - dbus=1.13.2=h760590f_1
+  - cryptography=2.3.1=py35hc365091_0
+  - cython=0.28.5=py35hf484d3e_0
+  - dbus=1.13.2=h714fa37_1
   - decorator=4.3.0=py35_0
   - entrypoints=0.2.3=py35_2
-  - expat=2.2.6=h0a44026_0
-  - gettext=0.19.8.1=h15daf44_3
-  - glib=2.56.2=hd9629dc_0
+  - expat=2.2.6=he6710b0_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
+  - glib=2.56.2=hd408876_0
+  - gmp=6.1.2=h6c8ec71_1
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
   - html5lib=1.0.1=py35_0
   - hyperlink=18.0.0=py35_0
-  - icu=58.2=h4b95b61_1
+  - icu=58.2=h9c2bf20_1
   - idna=2.7=py35_0
   - incremental=17.5.0=py35_0
   - intel-openmp=2019.0=118
   - ipykernel=4.10.0=py35_0
   - ipython=6.5.0=py35_0
-  - ipython_genutils=0.2.0=py35hf129286_0
+  - ipython_genutils=0.2.0=py35hc9e07d0_0
   - ipywidgets=7.4.1=py35_0
   - jedi=0.12.1=py35_0
   - jinja2=2.10=py35_0
-  - jpeg=9b=he5867d9_2
-  - jsonschema=2.6.0=py35h2dd9e4b_0
+  - jpeg=9b=h024ee3a_2
+  - jsonschema=2.6.0=py35h4395190_0
   - jupyter=1.0.0=py35_7
   - jupyter_client=5.2.3=py35_0
-  - jupyter_console=5.2.0=py35hd2aa692_1
+  - jupyter_console=5.2.0=py35h4044a63_1
   - jupyter_core=4.4.0=py35_0
-  - libcxx=4.0.1=h579ed51_0
-  - libcxxabi=4.0.1=hebd6815_0
-  - libedit=3.1.20170329=hb402a30_2
-  - libffi=3.2.1=h475c297_4
-  - libgfortran=3.0.1=h93005f0_2
-  - libiconv=1.15=hdd342a3_7
-  - libpng=1.6.35=ha441bb4_0
-  - libsodium=1.0.16=h3efe00b_0
-  - markupsafe=1.0=py35h1de35cc_1
-  - mistune=0.8.3=py35h1de35cc_1
+  - libedit=3.1.20170329=h6b74fdf_2
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=8.2.0=hdf63c60_1
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.35=hbc83047_0
+  - libsodium=1.0.16=h1bed415_0
+  - libstdcxx-ng=8.2.0=hdf63c60_1
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
+  - libxml2=2.9.8=h26e45fe_1
+  - markupsafe=1.0=py35h14c3975_1
+  - mistune=0.8.3=py35h14c3975_1
   - mkl=2018.0.3=1
-  - mkl_fft=1.0.6=py35hb8a8100_0
-  - mkl_random=1.0.1=py35h5d10147_1
+  - mkl_fft=1.0.6=py35h7dd41cf_0
+  - mkl_random=1.0.1=py35h4414c95_1
   - nb_anacondacloud=1.4.0=py35_0
-  - nb_conda=2.2.1=py35hd4e941f_0
+  - nb_conda=2.2.1=py35hccc8299_0
   - nb_conda_kernels=2.1.0=py35_0
   - nbconvert=5.3.1=py35_0
-  - nbformat=4.4.0=py35h41c2038_0
-  - nbpresent=3.0.2=py35hb9ebbd1_1
-  - ncurses=6.1=h0a44026_0
+  - nbformat=4.4.0=py35h12e6e07_0
+  - nbpresent=3.0.2=py35h9c03491_1
+  - ncurses=6.1=hf484d3e_0
   - notebook=5.6.0=py35_0
-  - numpy=1.15.2=py35h6a91979_0
-  - numpy-base=1.15.2=py35h8a80b8c_0
-  - openssl=1.0.2p=h1de35cc_0
-  - pandas=0.23.4=py35h6440ff4_0
+  - numpy=1.15.2=py35h1d66e8a_0
+  - numpy-base=1.15.2=py35h81de0dd_0
+  - openssl=1.0.2p=h14c3975_0
+  - pandas=0.23.4=py35h04863e7_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py35_1
   - parso=0.3.1=py35_0
-  - pcre=8.42=h378b8a2_0
+  - pcre=8.42=h439df22_0
   - pexpect=4.6.0=py35_0
-  - pickleshare=0.7.4=py35h9517181_0
+  - pickleshare=0.7.4=py35hd57304d_0
   - pip=10.0.1=py35_0
   - prometheus_client=0.3.1=py35h28b3542_0
-  - prompt_toolkit=1.0.15=py35h93950c5_0
+  - prompt_toolkit=1.0.15=py35hc09de7a_0
   - ptyprocess=0.6.0=py35_0
   - pyasn1=0.4.4=py35h28b3542_0
   - pyasn1-modules=0.2.2=py35_0
   - pycparser=2.19=py35_0
-  - pygments=2.2.0=py35h392a662_0
+  - pygments=2.2.0=py35h0f41973_0
   - pyopenssl=18.0.0=py35_0
-  - pyqt=5.9.2=py35h655552a_2
+  - pyqt=5.9.2=py35h05f1152_2
   - pysocks=1.6.8=py35_0
-  - python=3.5.6=hc167b69_0
+  - python=3.5.6=hc3d631a_0
   - python-dateutil=2.7.3=py35_0
   - pytz=2018.5=py35_0
-  - pyyaml=3.13=py35h1de35cc_0
-  - pyzmq=17.1.2=py35h1de35cc_0
-  - qt=5.9.6=h45cd832_2
+  - pyyaml=3.13=py35h14c3975_0
+  - pyzmq=17.1.2=py35h14c3975_0
+  - qt=5.9.6=h8703b6f_2
   - qtconsole=4.4.1=py35_0
-  - readline=7.0=h1de35cc_5
+  - readline=7.0=h7b6447c_5
   - requests=2.19.1=py35_0
-  - scikit-learn=0.20.0=py35h4f467ca_1
-  - scipy=1.1.0=py35h28f7352_1
+  - scikit-learn=0.20.0=py35h4989274_1
+  - scipy=1.1.0=py35hfa4b5c9_1
   - send2trash=1.5.0=py35_0
   - service_identity=17.0.0=py35h28b3542_0
   - setuptools=40.2.0=py35_0
   - simplegeneric=0.8.1=py35_2
-  - sip=4.19.8=py35h0a44026_0
+  - sip=4.19.8=py35hf484d3e_0
   - six=1.11.0=py35_1
-  - sqlite=3.25.2=ha441bb4_0
+  - sqlite=3.25.2=h7b6447c_0
   - terminado=0.8.1=py35_1
-  - testpath=0.3.1=py35hf8009f4_0
-  - tk=8.6.8=ha441bb4_0
-  - tornado=5.1.1=py35h1de35cc_0
+  - testpath=0.3.1=py35had42eaf_0
+  - tk=8.6.8=hbc83047_0
+  - tornado=5.1.1=py35h7b6447c_0
   - tqdm=4.26.0=py35h28b3542_0
-  - traitlets=4.3.2=py35hd3d1486_0
-  - twisted=17.5.0=py35_0
+  - traitlets=4.3.2=py35ha522a97_0
+  - twisted=18.7.0=py35h14c3975_1
   - urllib3=1.23=py35_0
-  - wcwidth=0.1.7=py35hdd0c235_0
+  - wcwidth=0.1.7=py35hcd08066_0
   - webencodings=0.5.1=py35_1
   - wheel=0.31.1=py35_0
   - widgetsnbextension=3.4.1=py35_0
   - xlrd=1.1.0=py35_1
-  - xz=5.2.4=h1de35cc_4
-  - yaml=0.1.7=hc338f04_2
-  - zeromq=4.2.5=h0a44026_1
-  - zlib=1.2.11=hf3cbc9b_2
+  - xz=5.2.4=h14c3975_4
+  - yaml=0.1.7=had09818_2
+  - zeromq=4.2.5=hf484d3e_1
+  - zlib=1.2.11=ha838bed_2
   - zope=1.0=py35_1
-  - zope.interface=4.5.0=py35h1de35cc_0
+  - zope.interface=4.5.0=py35h14c3975_0
   - pip:
     - scripts==0.1
 
