--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ plotly==3.5.0               # plotly==3.2.1
 scikit-learn==0.20.2
 seaborn==0.9.0
 statsmodels==0.9.0
+xgboost==0.81
 tensorboard==1.12.2
 tensorflow==1.12.0          # Attention tensorflow ne fonctionne pas encore avec python 3.7 ! 
                             # J'utilise python 3.6.8 
